--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "docs:serve": "cd docs && mkdocs serve"
   },
   "dependencies": {
-    "axios": "0.22.0"
+    "axios": "^1.6.5"
   },
   "devDependencies": {
     "@types/node": "16.10.2",
     "mocha": "9.1.2",
-    "typescript": "4.4.3"
+    "typescript": "5.3.3"
   }
 }
